[package]
name = "classif-finder-wasm"
version = "0.1.0"
edition = "2024"
description = "A wasm module that fuzzy searches through a list of classes and returns best matches"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
include_json = "0.1.1"
nucleo-matcher = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"

[dev-dependencies]
wasm-pack = "0.13.1"
